# signals

./: README.md  pyproject.toml
lab_1/: lab.ipynb
lab_2/: lab.ipynb
lab_3/: coefficients.py  lab.ipynb
lab_4/: lab.ipynb
lab_5/: lab.ipynb
lab_6/: coefficients.py  lab.ipynb
lab_7/: lab.ipynb
lab_8/: lab.ipynb
