[tool.poetry]
name = "signals"
version = "0.1.0"
description = "Skibidi toilet"
authors = ["Ekinohito <ekinohito@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.10.2.post1"
matplotlib = "^3.9.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
